--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cookie-clicker",
   "version": "1.0.0",
   "description": "The 'Cookie Clicker' implementation for college studies",
-  "main": "main.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run dev",
